# filament

./: roxlu-build.sh  roxlu-compile-arch-linux.sh  roxlu-compile-clang.bat  roxlu-compile-msvc.bat  roxlu-compile.bat
assets/models/cube/: cube-v2.blend
filament/: CMakeLists.txt
filament/backend/include/backend/: DriverEnums.h
filament/backend/include/private/backend/: DriverAPI.inc
filament/backend/src/noop/: NoopDriver.cpp
filament/backend/src/opengl/: OpenGLDriver.cpp  PlatformWGL.cpp
filament/backend/src/vulkan/: VulkanDriver.cpp
filament/include/filament/: Texture.h
filament/src/: Material.cpp  PostProcessManager.cpp  Texture.cpp
filament/src/details/: Texture.h
roxlu-glfw/: CMakeLists.txt  build.bat  roxlu-compile-clang.bat  roxlu-compile-msvc.bat
roxlu-glfw/src/: OpenGlContext.cpp  OpenGlContext.h  test-backend-config-fbo-roxlu.cpp  test-backend-config-roxlu.cpp  test-backend-config.cpp  test-shared-gl-context.cpp  test-wgl-shared-context.cpp
samples/: CMakeLists.txt  matmesh.cpp
samples/materials/: glow.mat  transparency.mat
